src/test/deca/syntax/invalid/intermediaire2/wrongValue/04underFloat.deca
// Description:
//    Programme initialisant une variable float avec une valeur causant un underflow
//
// Resultats:
//    04underFloat.lis
//
// Historique:
//    cree le 17/06/2022
{
    float x = 1.0E-46;
}